--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <h1>SQUID</h1>
     <section class="container">
       <section class="loading">carregando...</section>
-      <section class="body_images">
-        <ol class="cart_images"></ol>
+      <section class="body-images">
       </section>
     </section>
     <script src="scripts.js"></script>
