--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Squid Instagram Feed</title>
-    <meta name="description" content="Squid Instagram Feed">
-    <meta name="author" content="Squidapp">
-    <link rel="stylesheet" href="styles.css?v=1.0">
+    <meta name="description" content="Squid Instagram Feed" />
+    <meta name="author" content="Squidapp" />
+    <link rel="stylesheet" href="styles.css?v=1.0" />
   </head>
   <body>
-    <h1>SQUID</h1>
+    <img src="./assets/logo.svg" alt="svgLogo" />
     <section class="container">
       <section class="loading">carregando...</section>
-      <section class="body-images">
-      </section>
+      <section class="body-images"></section>
     </section>
     <script src="scripts.js"></script>
   </body>
